# LidarGroundSeg

./: CMakeLists.txt  README.md  config.yaml  main.cpp
include/: patchworkpp.h
misc/: data_1.pcd  data_2.pcd  data_3.pcd
